--- a/build.gradle
+++ b/build.gradle
@@ -35,3 +35,16 @@ compileTestKotlin {
 		jvmTarget = '1.8'
 	}
 }
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.example.demo.DemoApplication'
+		)
+	}
+}
+
+/*jar{
+	baseName = 'myapp'
+	version = 'version'
+}*/
